import { Item, GildedRose } from '@/gilded-rose';

/**
 * This unit test uses [Jest Snapshot](https://goo.gl/fbAQLP).
 * 
 * There are two test cases here with different styles:
 * <li>"foo" is more similar to the unit test from the 'Java' version
 * <li>"thirtyDays" is more similar to the TextTest from the 'Java' version
 *
 * I suggest choosing one style to develop and deleting the other.
 */

describe('Gilded Rose Approval', () => {

  let gameConsoleOutput: string;
  let originalConsoleLog: (message: any) => void;
  let originalProcessArgv: string[]



  function gameConsoleLog(msg: string) {
    if (msg) {
      gameConsoleOutput += msg;
    }
    gameConsoleOutput += "\n";
  }

  beforeEach(() => {
    // prepare capturing console.log to our own gameConsoleLog.
    gameConsoleOutput = "";
    originalConsoleLog = console.log;
    console.log = gameConsoleLog;
    originalProcessArgv = process.argv;
  });

  afterEach(() => {
    // reset original console.log
    console.log = originalConsoleLog;
    process.argv = originalProcessArgv;
  });


  const items = [
    new Item("+5 Dexterity Vest", 10, 20),
    new Item("Aged Brie", 2, 0),
    new Item("Elixir of the Mongoose", 5, 7),
    new Item("Sulfuras, Hand of Ragnaros", 0, 80),
    new Item("Sulfuras, Hand of Ragnaros", -1, 80),
    new Item("Backstage passes to a TAFKAL80ETC concert", 15, 20),
    new Item("Backstage passes to a TAFKAL80ETC concert", 10, 39),
    new Item("Backstage passes to a TAFKAL80ETC concert", 5, 49),
  
    // This Conjured item does not work properly yet
    new Item("Conjured Mana Cake", 6, 12),
  ];
  
  const gildedRose = new GildedRose(items);
  const days = [...Array(20).keys()];

  test.each(days)('Approvel: Day %d', (d) => {
    gildedRose.updateQuality();
    expect(items).toMatchSnapshot(`day-${d}`);
  })

  /* for (const d in days) {

    // run an approval test for this day
    it(`Approval: Day ${d}`, () => {
      expect(items).toMatchSnapshot(`day-${d}`);
    });
  
    // and update the quality
    
  } */

  //it should not be sulfuras
  //it (sellIn) should be bigger then 0
  //else
  //it should be brie
  //it should be passes
  //sellIn should be between 5 and 10
  //sellIn should be lower then 5

  /* it('should thirtyDays', () => {
    process.argv = ["<node>", "<script", "30"];
    require('../golden-master-text-test.ts');
       
    expect(gameConsoleOutput).toMatchSnapshot();
  }); */

});
